src/test/deca/syntax/invalid/without_class/print_error_arguments3.deca
// Description:
//    error in argument of print function
//
// Result:
//     no viable alternative at input 'World'
//     line 9

{
    print(Hello World);
}